--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffa8b5;
+  background-color: #A8ECE7;
 
 }
 .Fran {
@@ -13,7 +13,7 @@ hr {
 }
 
 h1 {
-  color: #A8ECE7;
+  color: #ffa8b5;
 }
 h3 {
   color: #D47AE8;
